tests/snapshots/code_text_fallback_param__code_text_fallback_big_sample_py_stdout.snap
---
source: tests/code_text_fallback_param.rs
expression: out_default
---
  1: # big sample file for snapshot testing
486: def func_100():
487:     print("line 100")
976: def func_200():
