tests/snapshots/code_text_fallback_param__code_text_fallback_line_budget_beta_py_stdout.snap
---
source: tests/code_text_fallback_param.rs
expression: out_default
---
1: def delta():
2:     print("delta")
3: def epsilon():
4:     print("epsilon")
5: def zeta():
6:     print("zeta")
7:
