tests/snapshots/code_text_fallback_param__code_text_fallback_minimal_drop_case_py_stdout.snap
---
source: tests/code_text_fallback_param.rs
expression: out_default
---
  1: # Minimal reproduction for huge-budget omission
239: def block_34():
484: def block_69():
