tests/snapshots/code_text_fallback_param__code_text_fallback_multi_describe.test_js_stdout.snap
---
source: tests/code_text_fallback_param.rs
expression: out_default
---
  1: const helper = require('helper');
  3: describe('suite 0', () => {
115: });
229: });
