tests/snapshots/code_text_fallback_param__code_text_fallback_sample.snap
---
source: tests/code_text_fallback_param.rs
expression: out
---
package main

import "fm…
…
for i := 0…
…
  total += …
…
  }
…
}
return total
}

…
fmt.Printl…
}

…
