tests/snapshots/code_text_fallback_param__code_text_fallback_sample_cpp.snap
---
source: tests/code_text_fallback_param.rs
expression: out
---
#include <iostream>

void greet(const std::string& name) {
  …
}

int main() {
    greet("world");

…
…
}

…
