tests/snapshots/code_text_fallback_param__code_text_fallback_sample_cpp_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
 1: #include <iostream>
 2: 
 3: void greet(const std::string& name) {
17: 
19: }
20: 

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 4,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 87,
    "chars": 0,
    "lines": 7
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "default",
    "template": "code"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "#include <iostream>",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 1
        }
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 1,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 1
      },
      {
        "children": [
          {
            "atomic_token": "void greet(const std::string& name) {",
            "id": 0,
            "index_in_parent_array": 2,
            "kind": "string",
            "metrics": {}
          },
          {
            "id": 0,
            "index_in_parent_array": 3,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          }
        ],
        "id": 0,
        "index_in_parent_array": 2,
        "kind": "array",
        "metrics": {
          "array_len": 2
        },
        "omitted_before": 2
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 16,
            "kind": "string",
            "metrics": {}
          },
          {
            "id": 0,
            "index_in_parent_array": 17,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          }
        ],
        "id": 0,
        "index_in_parent_array": 7,
        "kind": "array",
        "metrics": {
          "array_len": 2
        },
        "omitted_before": 16
      },
      {
        "children": [
          {
            "atomic_token": "}",
            "id": 0,
            "index_in_parent_array": 18,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 8,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 18
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 19,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 9,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 19
      }
    ],
    "gaps": [
      {
        "before_child_index": 3,
        "omitted_count": 4
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 10
    }
  },
  "selection": {
    "top_k": 15
  },
  "template": "code"
}
