tests/snapshots/code_text_fallback_param__code_text_fallback_sample_cpp_default.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 80
expression: out
---
#include <iostream>

void greet(const std::string& name) {
  …
}

int main() {
    greet("world");

…
…
}

…
